--- a/css/main.scss
+++ b/css/main.scss
@@ -2,4 +2,4 @@
 # YAML front matter to prompt Jekyll to process SASS
 ---
 
-@import 'base', 'layout';
+@import 'base', 'layout', 'component', 'page';
