--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,5 @@
 ---
-# YAML front matter to prompt Jekyll to process SASS
+# YAML front matter, prompting Jekyll to process SASS
 ---
 
 @import 'base', 'layout', 'component', 'page';
