--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -12,3 +12,20 @@
         width: 40%; 
     }
 }
+
+.page-centred-wrapper {
+    display: table;
+    height: 100%;
+    width: 100%;
+}
+
+.page-centred-container {
+    display: table-cell;
+    padding: 80px 50px;
+    vertical-align: middle;
+}
+
+.page-centred-content {
+    position: relative;
+    z-index: 9
+}
