--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -1,5 +1,38 @@
 #about {
     .content {
         background: #092135;
+        color: #fff;
+
+        h1, h2, h3 {
+            margin: 10px 0;
+        }
+
+        p {
+            margin: 30px 0;
+        }
+
+        .fade-title {
+            color: rgba(246,246,246,0.15);
+            font-size: 140px;
+            left: 90px;
+            line-height: 140px;
+            position: absolute;
+            text-transform: uppercase;
+            top: -115px;
+            z-index: -1;
+        }
+
+        .title {
+            color: #f1ab3d;
+            font-size: 55px;
+            line-height: 55px;
+            text-transform: uppercase;
+        }
+
+        .sub-title {
+            color: #fff;
+            font-size: 16px;
+            text-transform: uppercase;
+        }
     }
 }
