--- a/css/main.scss
+++ b/css/main.scss
@@ -2,4 +2,4 @@
 # YAML front matter, prompting Jekyll to process SASS
 ---
 
-@import 'base', 'layout', 'component', 'page';
+@import 'base', 'layout', 'component', 'page', 'responsive';
