--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,13 @@
 
   {% include head.html %}
 
-  <body>
+  <body class="{% if page.class %}{{ page.class }}{% endif %}">
+    <div class="container-fluid">
+        <main>
+        {{ content }}
+        </main>
 
-    <main>
-      {{ content }}
-    </main>
-
-    {% include footer.html %}
-
+        {% include footer.html %}
+    </div>
   </body>
 
