--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,24 +1,22 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
 
-html, body, main {
+html, body, main, .container-fluid {
     height: 100%;
 }
 
 body {
-    overflow: hidden;
     font-family: 'Lato', sans-serif;
     font-size: 16px;
     line-height: 23px;
     font-weight: 300;
+    background: #092135;
+    color: #fff;
 }
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
-}
-
-article {
-    height: 100%;
-    overflow: hidden;
+    text-transform: uppercase;
+    color: #f1ab3d;
 }
