--- a/_sass/_component.scss
+++ b/_sass/_component.scss
@@ -42,16 +42,12 @@
     background-size: cover;
 
     .frame {
-        height: 96%;
-        margin: 3% 2%;
-        position: relative;
-        width: 96%;
         .border {
-            height: 100%;
-            left: 0;
+            height: 96%;
+            left: 2%;
             position: absolute;
-            top: 0;
-            width: 100%;
+            top: 2%;
+            width: 96%;
 
             &:before, &:after {
                 background-color: #000;
