--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -1,4 +1,6 @@
-#about {
+/*#about {
+    background: #092135;
+    color: #fff;
     .portrait {
         min-height: 450px;
     }
@@ -36,4 +38,4 @@
             font-size: 16px;
         }
     }
-}
+}*/
