--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -4,7 +4,7 @@
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
     body { 
-        &.single-page {
+       /* &.single-page {
             overflow: hidden;
 
             .block {
@@ -17,10 +17,14 @@
                 height: 100%;
                 overflow: hidden;
             }
-        }
+        }*/
     }
 
-    #about {
+    .container {
+        width: 750px;
+    }
+
+   /* #about {
         .portarait {
             height: 100%;
 
@@ -41,13 +45,12 @@
                 margin: 15px;
             }
         }
-    }
+    } */
  }
 
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 992px) { 
-
- }
+}
 
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) { 
