--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,2 @@
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="{{ '/js/app.js' | prepend: site.baseurl }}"></script>
+<footer>
+</footer>
