--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,28 +1,9 @@
 ---
 layout: default
+hero: false
 ---
-<article id="about" class="row">
-    <div class="block right portrait col-sm-4 col-sm-push-8">
-        <div class="frame">
-            <span class="border top-left"></span>
-            <span class="border bottom-right"></span>
-        </div>
-    </div>
-    <div class="block left content col-sm-8 col-sm-pull-4">
-        <div>
-            <h2 class="fade-title">
-                {{page.fade}}
-            </h2>
-            <h1 class="title">
-                {{page.title}}
-            </h1>
-            <h2 class="sub-title">
-                {{page.sub}}
-            </h2>
-            <p>
-                {{content}}
-            </p>
-            {% include social.html %}  
-        </div>
-    </div>      
+<article id="about">
+    {{content}}
+    <div id="portrait">
+    {% include social.html %}  
 </article>
