--- a/_sass/_component.scss
+++ b/_sass/_component.scss
@@ -1,7 +1,99 @@
+header {
+    text-transform: uppercase;
+
+    .bar {
+        background-color: rgba($primary, 0.7);
+        position: absolute;
+        width: 100%;
+    }
+
+    .logo {
+        font-family: 'Nothing You Could Do', cursive;
+        text-transform: capitalize;
+    }
+
+    nav {
+        float: right;
+
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            float: left;
+
+            &>li {
+                float: left;
+            }
+
+            &:after {
+                content: "";
+                display: table;
+                clear: both;
+            }
+            
+            a:hover {
+                background-color: rgba($primary, 0.9); 
+                transform: background-color 0.3s ease;
+            }
+        }
+
+        .lang {
+            border-radius: 100%;
+            background-color: rgba($primary, 0.9);    
+        }
+    }
+
+    a {
+        text-decoration: none;
+        display: inline-block;
+        padding: 7px;
+        color: #fff;
+        font-weight: 300;
+
+        &:hover {
+            color: #fff;
+        }
+    }
+
+    .hero {
+        background-image: url(/img/bg.jpg);
+        height: 150px;
+        background-position: center center;
+        background-size: cover;
+    }
+}
+
+article {
+    p:first-of-type {
+        font-style: italic;
+    }
+
+    footer {
+        color: $faded;
+        text-align: right;
+    }
+}
+
+.posts {
+    ul {
+        list-style-type: none;
+        padding: 0;
+    }
+
+    h3 {
+        color: $faded;
+    }
+
+    a {
+        text-decoration: none;
+    }
+}
+
+
 .social-icons { 
     font-size: 0;
     text-align: center;
-    margin-top: 60px;
+    margin: 60px 0;
     
     a {
         width: 40px;
@@ -14,30 +106,34 @@
         font-size: 18px;
         background: rgba(255,255,255,0.15);
         transition: all 300ms linear;
+
+        &:hover {
+		    
+        }
     }
 
-    a[class$="twitter"]:hover {
+    a[class$="twitter"] {
         background: #00BAFF;
     }
 
-    a[class$="facebook"]:hover {
+    a[class$="facebook"] {
         background: #3B5999;
     }
 
-    a[class$="linkedin"]:hover {
+    a[class$="linkedin"] {
         background: #007BB6;
     }
 
-    a[class$="github"]:hover {
-        background: #7197B0;
+    a[class$="github"] {
+        background: #4078c0;
     }
 
-    a + a{
+    a + a {
 	    margin-left: 15px;
     }
 }
 
-.portrait {
+/*.portrait {
     background: url(/img/lana_milanovich.jpg) no-repeat scroll center center;
     background-size: cover;
 
@@ -85,6 +181,7 @@
         }
     }
 }
+*/
 
 .action-buttons {
     text-align: center;
@@ -98,4 +195,18 @@
             margin-right: 10px;
         }
     }
+}
+
+#portrait {
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    margin: 1em auto;
+    background-image: url(/img/lana_milanovich.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    border-radius: 99em;
+    border: 5px solid #fff;
+    box-shadow: 0 3px 2px rgba(0, 0, 0, 0.25);  
 }
