--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,12 @@
 <nav>
     <ul>
-        <li><a href="/">Пишу</a></li>
-        <li><a href="/books">Читаю</a></li>
-        <li><a href="/work">Работаю</a></li>
-        <li><a href="/about">Обо Мне</a></li>
+    	{% for link in site.data.nav %}
+		    {% if link.url contains 'http' %}
+		        {% assign domain = '' %}
+		        {% else %}
+		        {% assign domain = site.url %}
+		    {% endif %}
+		    <li><a href="{{ domain }}{{ link.url }}" {% if link.url contains 'http' %}target="_blank"{% endif %}>{{ link.title }}</a></li>
+		{% endfor %}
     </ul>
 </nav>
