--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,5 @@
 ---
-layout: default
+layout: post
 ---
-<article>
 
-  <header>
-    <h1>{{ page.title }}</h1>
-  </header>
-
-  <div>
-    {{ content }}
-  </div>
-
-</article>
+{{ content }}
